fix: align textfield with dropdown

--- a/packages/core/src/tegel-light/components/tl-text-field/_tl-text-field-mixins.scss
+++ b/packages/core/src/tegel-light/components/tl-text-field/_tl-text-field-mixins.scss
@@ -64,8 +64,9 @@
 
 // Mixin for focus/input state selectors
 @mixin focus-input-state {
-  .tl-text-field:has(.tl-text-field__input:focus) .tl-text-field__label-inside,
-  .tl-text-field:has(.tl-text-field__input:not(:placeholder-shown)) .tl-text-field__label-inside {
+  .tl-text-field--label-inside:has(.tl-text-field__input:focus) .tl-text-field__label,
+  .tl-text-field--label-inside:has(.tl-text-field__input:not(:placeholder-shown))
+  .tl-text-field__label {
     @content;
   }
 }
